<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>jar</packaging>
    <artifactId>hongs-core</artifactId>
    <parent>
        <artifactId>hongs-base</artifactId>
        <groupId>io.github.ihongs</groupId>
        <version>0.9-SNAPSHOT</version>
    </parent>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <log4j.version>2.12.0</log4j.version>
        <slf4j.version>1.7.25</slf4j.version>
        <junit.version>4.12</junit.version>
    </properties>
    <dependencies>
        <dependency>
            <artifactId>junit</artifactId>
            <groupId>junit</groupId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <artifactId>slf4j-api</artifactId>
            <groupId>org.slf4j</groupId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <artifactId>log4j-api</artifactId>
            <groupId>org.apache.logging.log4j</groupId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <artifactId>log4j-core</artifactId>
            <groupId>org.apache.logging.log4j</groupId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <artifactId>log4j-slf4j-impl</artifactId>
            <groupId>org.apache.logging.log4j</groupId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <artifactId>commons-logging</artifactId>
            <groupId>commons-logging</groupId>
            <version>1.2</version>
        </dependency>
        <dependency>
            <artifactId>commons-pool2</artifactId>
            <groupId>org.apache.commons</groupId>
            <version>2.6.1</version>
        </dependency>
        <dependency>
            <artifactId>commons-dbcp2</artifactId>
            <groupId>org.apache.commons</groupId>
            <version>2.6.0</version>
        </dependency>
        <dependency>
            <artifactId>javax.servlet-api</artifactId>
            <groupId>javax.servlet</groupId>
            <version>3.1.0</version>
        </dependency>
        <dependency>
            <artifactId>javax.servlet.jsp-api</artifactId>
            <groupId>javax.servlet.jsp</groupId>
            <version>2.3.3</version>
        </dependency>
        <dependency>
            <artifactId>json-simple</artifactId>
            <groupId>com.googlecode.json-simple</groupId>
            <version>1.1.1</version>
        </dependency>
    </dependencies>
    <reporting>
        <plugins>
            <plugin>
                <artifactId>maven-javadoc-plugin</artifactId>
                <groupId>org.apache.maven.plugins</groupId>
                <version>2.10.1</version>
                <configuration>
                </configuration>
            </plugin>
        </plugins>
    </reporting>
    <build>
        <!--directory>bin</directory-->
        <!--
        <plugins>
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <groupId>org.apache.maven.plugins</groupId>
                <version>3.1.2</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <groupId>org.apache.maven.plugins</groupId>
                <version>3.8.1</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <groupId>org.apache.maven.plugins</groupId>
                <version>2.22.2</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
        </plugins>
        //-->
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <excludes>
                    <exclude>**/*.java</exclude>
                </excludes>
            </resource>
            <resource>
                <directory>src/test/resources</directory>
                <excludes>
                    <exclude>**/*.java</exclude>
                </excludes>
            </resource>
            <resource>
                <targetPath>lib/</targetPath>
                <directory>lib/</directory>
                <includes>
                    <include>*.jar</include>
                </includes>
            </resource>
        </resources>
    </build>
</project>
